# ilk-generator

./: LICENSE  ilkgen.py  pyproject.toml  readme.md
ilkgenerator/: __main__.py  codegenutils.py  generator.py  ilkgenerator.py  jacobians.py  posecompose.py  query.py  robotconstants.py  solvermodel.py
ilkgenerator/imp/: a_solver.dpc  ct.lua  generator.lua  id.lua  ilkgenerator.lua  interpret.lua  luabridge.py  main.lua  main.py  names.lua  opcodes.lua  posecompose.lua  postp.lua  robot.py
sample/queries/: ur5-simple.yaml
src/ilkgenerator/: __init__.py  __main__.py  generator.py  jacobians.py  main.py  optcompose.py  query.py  robotconstants.py  solvermodel.py  utils.py
tests/: textcmp.py
tests/cases/1_basic/: check.py  run.sh
tests/cases/1_basic/expected_output/: fk1.ilk  model-constants.lua
tests/cases/1_basic/inputs/: ur5-query-fk.yaml
