[project]

name        = "ilk-generator"
version     = "0.2.0"
description = "Generator of language-independent imperative models of kinematics solvers"
authors     = [
    { name = "Marco Frigerio", email = "mfgit.6uvfu@passinbox.com" }
]

license = "BSD-2-Clause"
readme = "readme.md"

requires-python = ">=3.4"

dependencies = [
    "kgprim >= 0.1.1",
    "robot-model-tools >= 0.2.0",
    "pyyaml"
]

[project.scripts]
ilkgen = "ilkgenerator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

